# Elementary-Operations

./: CMakeLists.txt  README.md  SDL_Menu.c  SDL_Menu.h  SDL_lib.c  SDL_lib.h  aux.c  aux.h  beta.c  beta.h  env.h  main.c  op.c  op.h  op_text.c  private.h  sdl.c  test.c
aux_func/: aux.c  aux.h
font/: CMakeLists.txt
img/: CMakeLists.txt
op_struct/: private.h
